Basic RestController implementation with H2 database in memory.
